Restrict option in weight paint doesn't work with gradient #80273

Closed
opened 2020-08-31 11:44:45 +02:00 by Emilien Colombier · 7 comments

System Information
Operating system: Linux-4.15.0-112-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 396.54

also tried on :

Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Broken: version: 2.83.3, 2.90.0 beta

Short description of error
Restrict option in weight paint doesn't work with the gradient tool

Exact steps for others to reproduce the error

  • Select the default cube and go to Edit mode
  • Create a new Vertex Group
  • Select only one vertex and assign it to the Vertex Group
  • Go to Weight Paint mode
  • In the sidebar, got to Tool>Options and activate Restrict
  • Select the Gradient tool and use it across the cube

This is not the desired behavior, the gradient should be restricted to the assigned vertex, just like the other weight paint tools

**System Information** Operating system: Linux-4.15.0-112-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 396.54 also tried on : Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Broken: version: 2.83.3, 2.90.0 beta **Short description of error** Restrict option in weight paint doesn't work with the gradient tool **Exact steps for others to reproduce the error** - Select the default cube and go to Edit mode - Create a new Vertex Group - Select only one vertex and assign it to the Vertex Group - Go to Weight Paint mode - In the sidebar, got to Tool>Options and activate Restrict - Select the Gradient tool and use it across the cube This is not the desired behavior, the gradient should be restricted to the assigned vertex, just like the other weight paint tools

Added subscriber: @Peine_Perdue

Added subscriber: @Peine_Perdue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-08-31 14:38:36 +02:00
Member

Can confirm, checking...

Can confirm, checking...

This issue was referenced by aa4cf47e40

This issue was referenced by aa4cf47e403ba3f098d89e991dafc9fec30423c4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

That was quick ! Thank you !

That was quick ! Thank you !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80273
No description provided.